--- a/index.html
+++ b/index.html
@@ -5,8 +5,147 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
+<header class="header-main">
+<h1>DEVICE</h1>
+<section class="header-menu">
+<form class="search">
+<input type="search">
+<button></button>
+</form>
+<ul class="header-menu-small">
+  <li><a href="#">Войти</a></li>
+<li><a href="#">Сравнить</a></li>
+<li><a href="#">Корзина</a></li>
+</ul>
+</section>
+<section class="header-menu-main">
+<span><a href="#">Каталог товаров</a></span>
+<ul>
+<li><a href="#">Доставка</a></li>
+<li><a href="#">Гарантия</a></li>
+<li><a href="#">Контакты</a></li>
+</ul>
+</section>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
+</header>
+
+<main>
+<section class="product">
+  <img class="product-item" src="http://placehold.it/150x100">
+  <b>Делай селфи,как Бен Стиллер!</b>
+  <p>
+  Самая длинная палка для селфи доступна в нашем магазине.</br>
+Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
+</p>
+<span><a href="#">Подробнее</a></span>
+<table class="product-item-description">
+  <tr>
+<td>8,5 м</td>
+<td>5 кг</td>
+<td>Карбон</td>
+  </tr>
+  <tr>
+<td>Длина палки</td>
+<td>Вес палки</td>
+<td>Материал</td>
+  </tr>
+
+</table>
+</section>
+
+<section class="catalog">
+  <ul class="catalog-item">
+    <li>
+      <img src="#" alt="Виртуальная реальность">
+      <h3>Виртуальная реальность</h3>
+    </li>
+    <li>
+      <img src="#" alt="Моноподы">
+      <h3>МСоноподы для селфи</h3>
+    </li>
+    <li>
+      <img src="#" alt="Экшн-камеры">
+      <h3>Экшн-камеры</h3>
+    </li>
+    <li>
+      <img src="#" alt="Фитнес-браслеты">
+      <h3>Фитнес-браслеты</h3>
+    </li>
+    <li>
+      <img src="#" alt="Умные часы">
+      <h3>Умные часы</h3>
+    </li>
+    <li>
+      <img src="#" alt="Квадрокоптеры">
+      <h3>Квадрокоптеры</h3>
+    </li>
+  </ul>
+</section>
+<ul class="services">
+  <li><button>Доставка</button></li>
+  <li><button>Гарантия</button></li>
+  <li><button>Кредит</button></li>
+</ul>
+
+<section class="services-about">
+<h2>Доставка</h2>
+<p>Мы с удовольствием доставим ваш товар прямо к вашему</br>
+   подъезду совершенно бесплатно! Ведь мы неплохо заработаем,</br>
+    поднимая его на ваш этаж.</p>
+
+</section>
+
+<ul class="partners">
+  <li><img src="#"></li>
+  <li><img src="#"></li>
+  <li><img src="#"></li>
+  <li><img src="#"></li>
+</ul>
+
+<section class="about-us">
+  <h2>О нас</h2>
+  <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+  <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
+  <ul>
+    <li>Деловые Линии</li>
+    <li>Автотрейдинг</li>
+    <li>ЖелДорЭкспедиция</li>
+  </ul>
+  <span><a href="#">Подробнее о нас</a></span>
+</section>
+
+<section>
+  <h2>Контакты</h2>
+  <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1123749473636!2d37.52742931602769!3d55.68703400452987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsINCg0L7RgdGB0LjRjywgMTE5MzEx!5e0!3m2!1sru!2sus!4v1520274363794" width="800" height="360" frameborder="0" style="border:0" allowfullscreen></iframe>
+  <span>Напишите нам</span>
+</section>
+
+</main>
+<footer class=footer-main"">
+  <div class="footer-info">
+    <h2>DEVICE</h2>
+    <span class="footer-adress">г. Москва, ул. Строителей, 15</span>
+  </div>
+  <ul class="footer-menu-main">
+    <li><a href="#">Доставка</li>
+      <li><a href="#">Гарантия</li>
+        <li><a href="#">Контакты</li>
+  </ul>
+  <ul class="footer-menu-small">
+    <li><a href="#">Войти</a></li>
+    <li><a href="#">Сравнить</a></li>
+    <li><a href="#">Корзина</a></li>
+  </ul>
+  <span class="footer-tel">Тел.: +7 (495) 495-95-95</span>
+  <ul class="footer-social">
+    <li><a href="#">Facebook</a></li>
+    <li><a href="#">Instagram</a></li>
+    <li><a href="#">Twiter</a></li>
+
+  </ul>
+
+</footer>
 
   </body>
 </html>
