Сделала inner.html и исправила index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <img class="product-item" src="http://placehold.it/150x100">
   <b>Делай селфи,как Бен Стиллер!</b>
   <p>
-  Самая длинная палка для селфи доступна в нашем магазине.</br>
+  Самая длинная палка для селфи доступна в нашем магазине.<br>
 Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
 </p>
 <span><a href="#">Подробнее</a></span>
@@ -89,8 +89,8 @@
 
 <section class="services-about">
 <h2>Доставка</h2>
-<p>Мы с удовольствием доставим ваш товар прямо к вашему</br>
-   подъезду совершенно бесплатно! Ведь мы неплохо заработаем,</br>
+<p>Мы с удовольствием доставим ваш товар прямо к вашему<br>
+   подъезду совершенно бесплатно! Ведь мы неплохо заработаем,<br>
     поднимая его на ваш этаж.</p>
 
 </section>
@@ -122,15 +122,15 @@
 </section>
 
 </main>
-<footer class=footer-main"">
+<footer class="footer-main">
   <div class="footer-info">
     <h2>DEVICE</h2>
     <span class="footer-adress">г. Москва, ул. Строителей, 15</span>
   </div>
   <ul class="footer-menu-main">
-    <li><a href="#">Доставка</li>
-      <li><a href="#">Гарантия</li>
-        <li><a href="#">Контакты</li>
+      <li><a href="#">Доставка</a></li>
+      <li><a href="#">Гарантия</a></li>
+      <li><a href="#">Контакты</a></li>
   </ul>
   <ul class="footer-menu-small">
     <li><a href="#">Войти</a></li>
