--- a/inner.html
+++ b/inner.html
@@ -5,8 +5,118 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
+<header class="header-main">
+<h1>DEVICE</h1>
+<section class="header-menu">
+<form class="search">
+<input type="search">
+<button></button>
+</form>
+<span class="user-name">Валентин Петухов</span>
+<ul class="header-menu-small">
+  <li><a href="#">Выйти</a></li>
+<li><a href="#">Сравнить</a></li>
+<li><a href="#">Корзина</a></li>
+</ul>
+</section>
+<section class="header-menu-main">
+<span><a href="#">Каталог товаров</a></span>
+<ul>
+<li><a href="#">Доставка</a></li>
+<li><a href="#">Гарантия</a></li>
+<li><a href="#">Контакты</a></li>
+</ul>
+</section>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
+</header>
+  <main>
+      <h2 class="page-title">Моноподы для селфи</h2>
+      <ul class="navigation">
+          <li><a href="index.html">Главная</a></li>
+          <li><a href="inner.html">Каталог товаров</a></li>
+          <li class="navigation-current">Моноподы для селфи</li>
+      </ul>
+      <span class="criteria-filter"></span>
+      <span class="criteria-sort"></span>
+      <ul class="criteria">
+          <li><a href="#">По цене</a></li>
+          <li><a href="#">По типу</a></li>
+          <li><a href="#">По популярности</a></li>
+      </ul>
+      <button class="up"></button>
+      <button class="down"></button>
+      <form class="filter">
+          <b class="price">Стоимость</b>
+          <b class="color">Цвет</b>
+          <label><input type="checkbox" name="black" >Черный</label>
+          <label><input type="checkbox" name="white" >Белый</label>
+          <label><input type="checkbox" name="blue" >Синий</label>
+          <label><input type="checkbox" name="red" >Красный</label>
+          <label><input type="checkbox" name="pink" >Розовый</label>
+          
+          <span class="bluetooth">Bluetooth</span>
+          <label><input type="radio" name="yes" сhecked>Есть</label>
+          <label><input type="radio" name="no" >Нет</label>
+          <button class="show-items">Показать</button>
+          
+      </form>
+      <section class="list">
+          <div class="list-item">
+              <img src="#" alt="Любительская селфи-палка">
+              <h3>Любительская селфи-палка</h3>
+              <b>500 руб.</b>
+          </div>
+             <div class="list-item">
+              <img src="#" alt="Профессиональная селфи-палка ">
+              <h3>Профессиональная селфи-палка </h3>
+              <b>1 500 руб.</b>
+          </div>
+             <div class="list-item">
+              <img src="#" alt="Непотопляемая селфи-палка">
+              <h3>Непотопляемая селфи-палка</h3>
+              <b>2 500 руб.</b>
+          </div> 
+             <div class="list-item">
+              <img src="#" alt="Селфи-палка «Следуй за мной»">
+              <h3>Селфи-палка «Следуй за мной»</h3>
+              <b>4 900 руб.</b>
+          </div>
+          <ul class="pages">
+              <li><button>Назад</button></li>
+              <li><button>1</button></li>
+              <li><button>2</button></li>
+              <li><button>3</button></li>
+              <li><button>Вперед</button></li>
+          </ul>
+      </section>
+  </main>
+  
+  <footer class="footer-main">
+  <div class="footer-info">
+    <h2>DEVICE</h2>
+    <span class="footer-adress">г. Москва, ул. Строителей, 15</span>
+  </div>
+  <ul class="footer-menu-main">
+      <li><a href="#">Доставка</a></li>
+      <li><a href="#">Гарантия</a></li>
+      <li><a href="#">Контакты</a></li>
+  </ul>
+  <span class="user-name">Валентин Петухов</span>
+  <ul class="footer-menu-small">
+    <li><a href="#">Выйти</a></li>
+    <li><a href="#">Сравнить</a></li>
+    <li><a href="#">Корзина</a></li>
+  </ul>
+  <span class="footer-tel">Тел.: +7 (495) 495-95-95</span>
+  <ul class="footer-social">
+    <li><a href="#">Facebook</a></li>
+    <li><a href="#">Instagram</a></li>
+    <li><a href="#">Twiter</a></li>
 
+  </ul>
+
+</footer>
+
+   
   </body>
 </html>
