добавила в index.html меню

--- a/index.html
+++ b/index.html
@@ -19,7 +19,17 @@
 </ul>
 </section>
 <section class="header-menu-main">
-<span><a href="#">Каталог товаров</a></span>
+<div class="header-catalog">
+  <a href="#">Каталог товаров</a>
+  <ul class="header-catalog-menu">
+    <li>Виртуальная реальность</li>
+    <li>Моноподы для селфи</li>
+    <li>Экшн-камеры</li>
+    <li>Фитнес-браслеты</li>
+    <li>Умные часы</li>
+    <li>Квадрокоптеры</li>
+  </ul>
+</div>
 <ul>
 <li><a href="#">Доставка</a></li>
 <li><a href="#">Гарантия</a></li>
