--- a/inner.html
+++ b/inner.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 <header class="header-main">
-<h1>DEVICE</h1>
+<h1><a href="index.html">DEVICE</a></h1>
 <section class="header-menu">
 <form class="search">
 <input type="search">
@@ -19,8 +19,19 @@
 <li><a href="#">Корзина</a></li>
 </ul>
 </section>
+
 <section class="header-menu-main">
-<span><a href="#">Каталог товаров</a></span>
+<div class="header-catalog">
+  <a href="inner.html">Каталог товаров</a>
+  <ul class="header-catalog-menu">
+    <li>Виртуальная реальность</li>
+    <li>Моноподы для селфи</li>
+    <li>Экшн-камеры</li>
+    <li>Фитнес-браслеты</li>
+    <li>Умные часы</li>
+    <li>Квадрокоптеры</li>
+  </ul>
+</div>
 <ul>
 <li><a href="#">Доставка</a></li>
 <li><a href="#">Гарантия</a></li>
@@ -36,8 +47,8 @@
           <li><a href="inner.html">Каталог товаров</a></li>
           <li class="navigation-current">Моноподы для селфи</li>
       </ul>
-      <span class="criteria-filter"></span>
-      <span class="criteria-sort"></span>
+      <span class="criteria-filter">Фильтр</span>
+      <span class="criteria-sort">Сортировка</span>
       <ul class="criteria">
           <li><a href="#">По цене</a></li>
           <li><a href="#">По типу</a></li>
@@ -94,19 +105,22 @@
   <footer class="footer-main">
   <div class="footer-info">
     <h2>DEVICE</h2>
-    <span class="footer-adress">г. Москва, ул. Строителей, 15</span>
-  </div>
+    </div>
+    
+     <ul class="footer-menu-small">
+    <li><a href="#">Выйти</a></li>
+    <li><a href="#">Сравнить</a></li>
+    <li><a href="#">Корзина</a></li>
+  </ul>
+  <span class="footer-adress">г. Москва, ул. Строителей, 15</span>
+  
   <ul class="footer-menu-main">
       <li><a href="#">Доставка</a></li>
       <li><a href="#">Гарантия</a></li>
       <li><a href="#">Контакты</a></li>
   </ul>
   <span class="user-name">Валентин Петухов</span>
-  <ul class="footer-menu-small">
-    <li><a href="#">Выйти</a></li>
-    <li><a href="#">Сравнить</a></li>
-    <li><a href="#">Корзина</a></li>
-  </ul>
+ 
   <span class="footer-tel">Тел.: +7 (495) 495-95-95</span>
   <ul class="footer-social">
     <li><a href="#">Facebook</a></li>
@@ -114,6 +128,7 @@
     <li><a href="#">Twiter</a></li>
 
   </ul>
+ <a class="footer-html" href="https://htmlacademy.ru/">ссылка на академию</a>
 
 </footer>
 
