добавила ссылки в меню

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <div class="header-catalog">
       <a href="inner.html">Каталог товаров</a>
       <ul class="header-catalog-menu">
-        <li>Виртуальная реальность</li>
-        <li>Моноподы для селфи</li>
-        <li>Экшн-камеры</li>
-        <li>Фитнес-браслеты</li>
-        <li>Умные часы</li>
-        <li>Квадрокоптеры</li>
+          <li><a href="#">Виртуальная реальность</a></li>
+          <li><a href="#">Моноподы для селфи</a></li>
+          <li><a href="#">Экшн-камеры</a></li>
+          <li><a href="#">Фитнес-браслеты</a></li>
+          <li><a href="#">Умные часы</a></li>
+          <li><a href="#">Квадрокоптеры</a></li>
       </ul>
     </div>
     <ul>
