--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           <li><a href="#">Контакты</a></li>
       </ul>
 
-      <span class="footer-tel">Тел.: +7 (495) 495-95-95</span>
+      <a class="footer-tel" href="tel:+74954959595">Тел.: +7 (495) 495-95-95</a>
 
       <ul class="footer-social">
         <li><a href="#">Facebook</a></li>
