--- a/inner.html
+++ b/inner.html
@@ -54,21 +54,22 @@
           <span class="criteria-filter">Фильтр</span>
           <span class="criteria-sort">Сортировка</span>
           <ul class="criteria">
-              <li><a href="#">По цене</a></li>
-              <li><a href="#">По типу</a></li>
-              <li><a href="#">По популярности</a></li>
+              <li>  <button class="criteria-button" type="button">По цене</button></li>
+              <li><button class="criteria-button" type="button">По типу</button></li>
+              <li><button class="criteria-button" type="button">По популярности</button></li>
           </ul>
           <button class="up"></button>
           <button class="down"></button>
           <form class="filter" action="#" method="post">
             <fieldset>
             <p>
-                <label for="filter-price">Стоимость</label>
+                <legend>Стоимость</legend>
+                <label for="filter-price" class="visually-hidden">Стоимость</label>
                 <input type="range" name="range" id="filter-price">
               </p>
               </fieldset>
               <fieldset>
-              <span class="filter-color">Цвет</span>
+                <legend>Цвет</legend>
               <label><input type="checkbox" name="black" >Черный</label>
               <label><input type="checkbox" name="white" >Белый</label>
               <label><input type="checkbox" name="blue" >Синий</label>
@@ -76,7 +77,7 @@
               <label><input type="checkbox" name="pink" >Розовый</label>
               </fieldset>
               <fieldset>
-              <span class="filter-bluetooth">Bluetooth</span>
+              <legend>Bluetooth</legend>
               <label><input type="radio" name="yes" сhecked>Есть</label>
               <label><input type="radio" name="no" >Нет</label>
               <button class="show-items" type="submit">Показать</button>
@@ -110,6 +111,7 @@
                   <li><button>3</button></li>
                   <li><button>Вперед</button></li>
               </ul>
+              <span class="list-item-new">New</span>
           </section>
      </main>
 
@@ -133,7 +135,7 @@
       </ul>
       <span class="user-name">Валентин Петухов</span>
 
-      <span class="footer-tel">Тел.: +7 (495) 495-95-95</span>
+      <a class="footer-tel" href="tel:+74954959595">Тел.: +7 (495) 495-95-95</a>
       <ul class="footer-social">
         <li><a href="#">Facebook</a></li>
         <li><a href="#">Instagram</a></li>
