--- a/index.html
+++ b/index.html
@@ -48,9 +48,6 @@
     Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
     </p>
     <a class="product-more" href="#">Подробнее</a>
-    <span class="product-item-slider"></span>
-    <span class="product-item-slider"></span>
-    <span class="product-item-slider"></span>
     <table class="product-item-description">
       <tr>
             <td>8,5 м</td>
@@ -74,9 +71,6 @@
     не пропускать занятия и соблюдать диету.
     </p>
     <a class="product-more" href="#">Подробнее</a>
-    <span class="product-item-slider"></span>
-    <span class="product-item-slider"></span>
-    <span class="product-item-slider"></span>
     <table class="product-item-description">
       <tr>
             <td>48 часов</td>
@@ -95,10 +89,6 @@
       Этот обычный, на первый взгляд, квадрокоптер оснащен
     мощным лазером, замаскированным под стандартную камеру.
     </p>
-    <a class="product-more" href="#">Подробнее</a>
-    <span class="product-item-slider"></span>
-    <span class="product-item-slider"></span>
-    <span class="product-item-slider"></span>
     <table class="product-item-description">
       <tr>
             <td>800 M</td>
@@ -148,6 +138,12 @@
         поднимая его на ваш этаж.</p>
 
     </section>
+    <div class="slider">
+    <label for="item-slider" class="visually-hidden">Переключить товар </label>
+    <input id="item-slider" type="radio" name="item-slider" >
+    <input id="item-slider" type="radio" name="item-slider" >
+    <input id="item-slider" type="radio" name="item-slider" >
+    </div>
 
     <ul class="partners">
        <li><img src="img/logo-1.png" alt="DJI"></li>
