--- a/inner.html
+++ b/inner.html
@@ -91,7 +91,7 @@
               </div>
                  <div class="list-item">
                   <img src="img/item-2.jpg" alt="Профессиональная селфи-палка ">
-                  <h3><a href="#">Профессиональная селфи-палка</a>< </h3>
+                  <h3><a href="#">Профессиональная селфи-палка</a></h3>
                   <b>1 500 руб.</b>
               </div>
                  <div class="list-item">
