--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
         <meta charset="utf-8">
         <title>HTML Academy: Девайс</title>
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&amp;subset=cyrillic" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
     <header class="header-main">
-    <h1>DEVICE</h1>
+    <h1 class="logo">DEVICE</h1>
     <section class="header-menu">
     <form class="search">
     <input type="search">
@@ -31,7 +33,7 @@
           <li><a href="#">Квадрокоптеры</a></li>
       </ul>
     </div>
-    <ul>
+    <ul class="option-menu">
         <li><a href="#">Доставка</a></li>
         <li><a href="#">Гарантия</a></li>
         <li><a href="#">Контакты</a></li>
