--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
     </div>
 
     <ul class="partners">
-       <li><img src="img/logo-1.png" alt="DJI"></li>
-       <li><img src="img/logo-2.png" alt="SP Gadgets"></li>
-       <li><img src="img/logo-3.png" alt="GoPro"></li>
-       <li><img src="img/logo-4.png" alt="vive"></li>
+       <li class="partners-logo"><img src="img/logo-1.png" alt="DJI"></li>
+       <li class="partners-logo"><img src="img/logo-2.png" alt="SP Gadgets"></li>
+       <li class="partners-logo"><img src="img/logo-3.png" alt="GoPro"></li>
+       <li class="partners-logo"><img src="img/logo-4.png" alt="vive"></li>
     </ul>
 
     <section class="about-us">
@@ -163,14 +163,14 @@
         <li>Автотрейдинг</li>
         <li>ЖелДорЭкспедиция</li>
       </ul>
-      <a class="about-us-more" href="#">Подробнее о нас</a>
+      <a class="about-us-more button" href="#">Подробнее о нас</a>
     </section>
 
-    <section>
+    <section class="contacts">
       <h2>Контакты</h2>
       <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1123749473636!2d37.52742931602769!3d55.68703400452987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsINCg0L7RgdGB0LjRjywgMTE5MzEx!5e0!3m2!1sru!2sus!4v1520274363794" width="800" height="360" frameborder="0" style="border:0" allowfullscreen></iframe>
-          <button class="write-to-us" type="button">Напишите нам</button>
+          <button class="write-to-us button" type="button">Напишите нам</button>
     </section>
 
     </main>
