правильно пожключила шрифты

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       Самая длинная палка для селфи доступна в нашем магазине.<br>
     Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
     </p>
-    <a class="product-more" href="#">Подробнее</a>
+    <a class="product-more button" href="#">Подробнее</a>
     <table class="product-item-description">
       <tr>
             <td>8,5 м</td>
@@ -72,7 +72,7 @@
       Мотивирующие фитнес-браслеты помогут найти в себе силы
     не пропускать занятия и соблюдать диету.
     </p>
-    <a class="product-more" href="#">Подробнее</a>
+    <a class="product-more button" href="#">Подробнее</a>
     <table class="product-item-description">
       <tr>
             <td>48 часов</td>
@@ -91,6 +91,7 @@
       Этот обычный, на первый взгляд, квадрокоптер оснащен
     мощным лазером, замаскированным под стандартную камеру.
     </p>
+    <a class="product-more button" href="#">Подробнее</a>
     <table class="product-item-description">
       <tr>
             <td>800 M</td>
