--- a/index.html
+++ b/index.html
@@ -108,26 +108,27 @@
 
     <section class="catalog">
       <ul class="catalog-item">
-        <li>
+        <li class="catalog-popular">
             <a href="#"><b>Виртуальная реальность</b></a>
         </li>
-        <li>
+        <li class="catalog-popular">
             <a href="#"> <b>Моноподы для селфи</b></a>
         </li>
-        <li>
+        <li class="catalog-popular">
             <a href="#"><b>Экшн-камеры</b></a>
         </li>
-        <li>
+        <li class="catalog-popular">
             <a href="#"><b>Фитнес-браслеты</b></a>
         </li>
-        <li>
+        <li class="catalog-popular">
             <a href="#"><b>Умные часы</b></a>
         </li>
-        <li>
+        <li class="catalog-popular">
             <a href="#"><b>Квадрокоптеры</b></a>
         </li>
       </ul>
     </section>
+    <div class="service">
     <ul class="services">
       <li><button class="services-button" type="button">Доставка</button></li>
       <li><button class="services-button" type="button">Гарантия</button></li>
@@ -141,6 +142,7 @@
         поднимая его на ваш этаж.</p>
 
     </section>
+    </div>
     <div class="slider">
     <label for="item-slider" class="visually-hidden">Переключить товар </label>
     <input id="item-slider" type="radio" name="item-slider" >
@@ -218,7 +220,7 @@
           <label for="write-us-text">Текст письма:</label>
           <input id="write-us-text" type="text" placeholder="В свободной форме" >
       </p>
-      <button class="write-us-send" type="submit">Отправить</button>
+      <button class="write-us-send button" type="submit">Отправить</button>
       <button class="write-us-close">X</button>
       </form>
       <div class="map-popup">
